# ChangeLog for dev-util/cscope
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cscope/ChangeLog,v 1.109 2009/04/14 16:38:47 jer Exp $

  14 Apr 2009; Jeroen Roovers <jer@gentoo.org> cscope-15.7.ebuild:
  Stable for HPPA (bug #264509).

  10 Apr 2009; Raúl Porcel <armin76@gentoo.org> cscope-15.7.ebuild:
  arm/ia64/s390/sh/x86 stable wrt #264509

  07 Apr 2009; Tobias Klausmann <klausman@gentoo.org> cscope-15.7.ebuild:
  Stable on alpha, bug #264509

  03 Apr 2009; Tiago Cunha <tcunha@gentoo.org> cscope-15.7.ebuild:
  stable amd64, bug 264509

  02 Apr 2009; Joseph Jezak <josejx@gentoo.org> cscope-15.7.ebuild:
  Marked ppc/ppc64 stable for bug #264509.

  01 Apr 2009; Ferris McCormick <fmccor@gentoo.org> cscope-15.7.ebuild:
  Sparc stable, bug #264509.

*cscope-15.7 (01 Mar 2009)

  01 Mar 2009; Ulrich Mueller <ulm@gentoo.org> cscope-15.6-r2.ebuild,
  cscope-15.6-r3.ebuild, +cscope-15.7.ebuild:
  Version bump, bug 260585. LICENSE is BSD, not as-is.

*cscope-15.6-r3 (24 Oct 2008)

  24 Oct 2008; Ulrich Mueller <ulm@gentoo.org>
  +files/cscope-15.6-sigwinch.patch, +cscope-15.6-r3.ebuild:
  Fix crash on window resizes, bug 243754. Thanks to Michael Hordijk
  <hoffbrinkle@hotmail.com>.

  20 Sep 2008; Ulrich Mueller <ulm@gentoo.org> -files/50xcscope-gentoo.el,
  -cscope-15.6-r1.ebuild:
  Remove old.

  23 Jan 2008; Raúl Porcel <armin76@gentoo.org> cscope-15.6-r2.ebuild:
  alpha/ia64/sparc stable wrt #207042

  22 Jan 2008; Brent Baude <ranger@gentoo.org> cscope-15.6-r2.ebuild:
  Marking cscope-15.6-r2 ppc and ppc64 for bug 207042

  22 Jan 2008; Jeroen Roovers <jer@gentoo.org> cscope-15.6-r2.ebuild:
  Stable for HPPA (bug #207042).

  22 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  cscope-15.6-r2.ebuild:
  stable amd64/x86, bug 207042

*cscope-15.6-r2 (21 Sep 2007)

  21 Sep 2007; Ulrich Mueller <ulm@gentoo.org> +files/50cscope-gentoo.el,
  +cscope-15.6-r2.ebuild: