@@ -7,8 +7,10 @@ AUX cscope-15.6-sigwinch.patch 1063 RMD160 4c1659bc131bff9704a17b6a8cb013e9adf03
 AUX cscope-158831-warning_webscope.patch 756 RMD160 aaf17fd08a02d4cad574d3e08368303ff7fb61a2 SHA1 eedca40470488cd4e63d117454856f8c1f6e6e31 SHA256 1bc88825a36646370abec03197e5373f06ea34e7e5576d1926ce2d0afc2f0c37
 DIST cscope-15.6.tar.gz 391223 RMD160 b93238d3c91782d032e028abcfde3c2a7491a9c9 SHA1 f5f73dca1f223cf6905c09a7f0e8eb993fa5fd93 SHA256 6d6461ef402a1d6e42e1cd40e7524c4ed19e79eacef1d83ba4ed680f7bcac5ca
 DIST cscope-15.7.tar.bz2 243576 RMD160 c8b04487fc118441f4533073f758ce6abe4a409a SHA1 293196c4e2a7eec5633a9019e39544dc9894b827 SHA256 6a657a320f6601c28875aed2a487d55fe14b467b18f4631546016bb60e08cf33
+DIST cscope-15.7a.tar.bz2 361214 RMD160 8bc904f636e8e6ea4542738095183475911858f9 SHA1 f6348694e5443769add851f97fd39365e93dc474 SHA256 02638bcba790bc8b0562f28dbe789e61794415079d94a676efc287d18dc96037
 EBUILD cscope-15.6-r2.ebuild 1892 RMD160 f1442e216bf4e6d6f1fdecc689cf87cc356eeb31 SHA1 6d9d4059382fc6332dc2957a8e16f2c6fb6370df SHA256 6fd4cee7ad04dad611ad20bf9cf8f4653b912f63625eabaaebd3cae6bec27158
 EBUILD cscope-15.6-r3.ebuild 1934 RMD160 554453891e70c15a2fd6a950c0e5641a63c9f632 SHA1 6374cae4c5e8673d12840e0f834204cee30cc30d SHA256 4f96f62a8fe9338a34f93eba251667bf640f57c93e101bebf67456008b638660
 EBUILD cscope-15.7.ebuild 1718 RMD160 2183d8109678930f36120eed1a9018a4acc58fab SHA1 f502a75c6966b670d1457c5951bab7af893767ae SHA256 a4193e0a63e018be4c657e50658deb1623accaacdcbcb1a08763479dc44f12be
-MISC ChangeLog 14692 RMD160 20a20823449f726836ec8514fa08fca895c26209 SHA1 f54aa2c7d087cbff5ff76c521a733af34d12079b SHA256 37776afa4abbf1f5e9fc9903021bee4353e074b5ac8016b81c6ae81e8020633d
+EBUILD cscope-15.7a.ebuild 1719 RMD160 53b7d1962941a0c7ed899ce048dfa3e0aa8ef1df SHA1 87375781e2cfa30793f5b1656f3a7ab405d63072 SHA256 543b028e31b70021e9b2b1639d2a8607e3b9d8f3fd282e487765b71e11559fb6
+MISC ChangeLog 14933 RMD160 f7fe4cb98a967af83e5d06b9dff262df8da4ff77 SHA1 00181537d40b7fee2337ac5ba85d835727112913 SHA256 3071724b8aeb97027dd5800f0df65929864cca07865d6a265135c25cfc9f81d2
 MISC metadata.xml 790 RMD160 7889067edaf88f6188a74c114c39160fcf827f71 SHA1 379cdedd442db840c7d9ea38c13cdb917ece90eb SHA256 c357e749a49ff673990a6cfdda92bd8589d6b5d2d8a4f45e8976d7bd7eb384d8
