@@ -1,6 +1,14 @@
 # ChangeLog for dev-util/cscope
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cscope/ChangeLog,v 1.109 2009/04/14 16:38:47 jer Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cscope/ChangeLog,v 1.111 2009/05/02 14:15:59 jer Exp $
+
+  02 May 2009; Jeroen Roovers <jer@gentoo.org> cscope-15.7a.ebuild:
+  Stable for HPPA (bug #263023).
+
+*cscope-15.7a (02 May 2009)
+
+  02 May 2009; Ulrich Mueller <ulm@gentoo.org> +cscope-15.7a.ebuild:
+  Version bump for security bug 263023.
 
   14 Apr 2009; Jeroen Roovers <jer@gentoo.org> cscope-15.7.ebuild:
   Stable for HPPA (bug #264509).
